Added login footer register

--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -1,1 +1,48 @@
-<p>about works!</p>
+<app-header/>
+
+
+<!-- TOP SECTION -->
+<section class="about-top">
+
+  <div class="top-left">
+    <img src="https://www.pngall.com/wp-content/uploads/2016/06/Healthy-Food-PNG-Image.png" alt="Veg Basket" />
+  </div>
+
+  <div class="top-right">
+    <h1>Welcome To CookPedia</h1>
+    <p>
+      Discover 100+ recipes in your hand with the best recipe.
+      Help you to find the easiest way to cook.
+    </p>
+  </div>
+
+</section>
+
+<!-- ABOUT SECTION -->
+<section class="about-section">
+  <div class="about-left">
+    <h2>About Us</h2>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Dolores quas illum deserunt vel quaerat soluta neque ratione
+      dolorem explicabo earum.
+    </p>
+
+    <ul>
+      <li>Lorem ipsum dolor sit amet consectetur</li>
+      <li>Dolores quas illum deserunt vel quaerat soluta neque</li>
+      <li>Odio at porro facere nemo non</li>
+      <li>Uaeart soluta neque ratione dolorem explicabo earum</li>
+    </ul>
+
+    <button class="about-btn">Know More About Us</button>
+  </div>
+
+  <div class="about-right">
+    <img src="https://purepng.com/public/uploads/large/purepng.com-chefcheftrained-professional-cookfood-preparationkitchenchefsexperienced-1421526718958rc6kx.png" alt="Chef" />
+  </div>
+</section>
+<app-footer/>
+
+
