--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,1 +1,59 @@
-<p>footer works!</p>
+<footer class="footer-section">
+  <div class="footer-container">
+
+    <!-- LEFT SECTION -->
+    <div class="footer-left">
+      <h2 class="brand">
+        <i class="fa fa-graduation-cap"></i> SpiceStories
+      </h2>
+      <p>
+        Discover 100+ recipes in your hand with the best recipe.
+        Help you to find the easiest way to cook.
+      </p>
+    </div>
+
+    <!-- NEWSLETTER -->
+    <div class="footer-newsletter">
+      <h3>Sign up for our news letter</h3>
+      <div class="newsletter-box">
+        <input type="email" placeholder="Enter your Mail Id" />
+        <button><i class="fa fa-arrow-right"></i></button>
+      </div>
+    </div>
+
+    <!-- MENUS -->
+    <div class="footer-menu">
+      <h4>Menu</h4>
+      <ul>
+        <li>Home</li>
+        <li>Recipes</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </div>
+
+    <!-- HELP LINKS -->
+    <div class="footer-help">
+      <h4>Help</h4>
+      <ul>
+        <li>Login</li>
+        <li>Register</li>
+        <li>Terms of Use</li>
+        <li>Privacy & Policy</li>
+      </ul>
+    </div>
+
+    <!-- SOCIAL MEDIA -->
+    <div class="footer-social">
+      <h4>Social Media</h4>
+      <ul>
+        <li>Facebook</li>
+        <li>Instagram</li>
+        <li>Twitter</li>
+        <li>Youtube</li>
+      </ul>
+    </div>
+
+  </div>
+</footer>
+
