--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,1 +1,28 @@
-<p>login works!</p>
+
+    <div class="register-container">   <!-- using same layout container -->
+        
+        <!-- LEFT SIDE LOGIN CARD -->
+        <div class="register-card"> 
+            <div class="logo">
+                🎓 Cookpedia
+            </div>
+
+            <form class="login-form">
+                <input type="email" class="input" placeholder="E Mail" required>
+                <input type="password" class="input" placeholder="Password" required>
+
+                <button type="submit" class="register-btn">Login</button>
+            </form>
+        </div>
+
+        <!-- RIGHT SIDE TEXT (same style as register page) -->
+        <div class="register-right">
+            <h1>Login</h1>
+            <p style="font-size:18px; margin-top:10px;">
+                More than 100 plus Recipes from around the world
+            </p>
+
+           
+        </div>
+
+    </div>
