--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -1,1 +1,32 @@
-<p>register works!</p>
+<div class="register-container">
+
+  <!-- LEFT FORM CARD -->
+  <div class="register-card">
+    <h2 class="logo">🎓 Spice Stories
+</h2>
+
+    <input type="text" placeholder="Username" class="input" />
+    <input type="email" placeholder="E Mail" class="input" />
+    <input type="password" placeholder="Password" class="input" />
+
+    <button class="register-btn">register</button>
+  </div>
+
+  <!-- RIGHT SIDE CONTENT -->
+  <div class="register-right text-black">
+    <h1>Create New <br> Account</h1>
+
+    <h3>What you will get?</h3>
+
+    <ul>
+      <li>Different Recipes</li>
+      <li>Easy way to Make Recipe</li>
+      <li>Save your Favorite Recipes</li>
+      <li>Download your Recipes</li>
+    </ul>
+
+ 
+  </div>
+
+</div>
+
