--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -1,1 +1,67 @@
-<p>contact works!</p>
+<div class="contact-header">
+  <h1>Contact Us</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit minus odio
+    ex fugiat sequi ea soluta quibusdam ex
+     incidunt in ratione necessitatibus,
+    possimus eligendi, eum molestias iste.   
+  </p>
+</div>
+
+<div class="contact-container">
+  <!-- LEFT SIDE -->
+  <div class="left">
+    <h2>Get In Touch</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, nisi dolorum
+      sapiente iure optio recusandae alias.
+    </p>
+
+    <div class="info">
+      <p><b>Address:</b> NYC 4677, PO Berlin</p>
+      <p><b>Phone Number:</b> 809873422</p>
+      <p><b>Email:</b> mail@gmail.com</p>
+    </div>
+
+    <h3>Follow Us</h3>
+    <div class="icons">
+<i class="fa-brands fa-facebook"></i>
+
+<i class="fa-brands fa-instagram"></i>   
+   <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-youtube"></i>
+
+    </div>
+  </div>
+
+  <!-- RIGHT SIDE FORM -->
+  <div class="right card">
+    <h3>Client Testimony</h3>
+    <form>
+      <input type="text" placeholder="Name" />
+      <input type="email" placeholder="E Mail" />
+      <textarea placeholder="Message" rows="4"></textarea>
+
+      <p class="small-text">
+        By submitting you’re agreeing the terms and conditions of our website.
+      </p>
+
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+</div>
+
+  <div class="mt-5 ms-auto">
+    <iframe
+      src="https://maps.google.com/maps?q=New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"
+      width="100%"
+      height="350"
+      class="rounded shadow-sm"
+      style="border:0"
+      allowfullscreen=""
+      loading="lazy">
+    </iframe>
+  </div>
+
+
+<app-footer/>
