--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,5 +1,24 @@
 <app-header></app-header>
 
+<div class="container">
+    <div class="col-lg-2">
 
-<p>home works!</p>
+ 
+    <div class="col-lg-2">
+        <h1>THe Easisest Way <br>
+            to make your <br>
+            Favourite Meal</h1>
+        <p style="text-align:justify ">
+            Discover 100+ recipes in your hand with the best recipe.Help you to find the easirst way to cook
+        </p>
+        <a routerLink="/recipes">Explore our Recipes</a>
+    </div>
+</div>
+<div class="col-lg-1">
+
+</div>
+<div class="col-lg-5">
+    <img src="https://www.pngall.com/wp-content/uploads/2/Healthy-Meal.png" alt="recipe">
+</div>
+   </div>
 <app-footer></app-footer>
