--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -25,10 +25,10 @@
     <div class="footer-menu">
       <h4>Menu</h4>
       <ul>
-        <li>Home</li>
-        <li>Recipes</li>
-        <li>About</li>
-        <li>Contact</li>
+        <li routerLink="/">Home</li>
+        <li routerLink="/recipes">Recipes</li>
+        <li routerLink="/about">About</li>
+        <li routerLink="/contact">Contact</li>
       </ul>
     </div>
 
