--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -1,8 +1,28 @@
-.landingImg{
- transition: 2s;
+.landingImg {
+  transition: 2s;
 }
-.landingImg:hover{
-  scale: 1.2;   
+
+.landingImg:hover {
+  scale: 1.2;
   transition: ease-in-out 1s;
   rotate: 180deg;
+}
+
+.scroll-left {
+  white-space: nowrap;
+  display: inline;
+  animation: scroll-left 10s linear infinite;
+}
+
+@keyframes scroll-left {
+  from {
+    transform: translateX(100%);
+
+
+  }
+
+  to {
+    transform: translateX(100%);
+
+  }
 }
