--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -4,7 +4,7 @@
     <div class="bg-success row p-5">
         <div class="col-lg-2"></div>
         <div class="col-lg-4 text-light">
-            <h1 class="text-capitalize ">the esiest way to make your favourite meal</h1>
+            <h1 class="text-capitalize ">the easiest way to make your favourite meal</h1>
             <p class="text-justify my-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta doloribus quia
                 praesentium, consectetur reiciendis mollitia corrupti</p>
             <button class="btn btn-success border" routerLink="/recipes">Explore Our Recipies</button>
@@ -102,27 +102,45 @@
     </div>
 
     <!-- download app -->
-     <div class="my-4">
+    <div class="my-4">
         <div class="bg-success p-5" style="height: 400px;">
             <div class="row h-100">
                 <div class="col-lg-6 d-flex align-items-center justify-content-center ">
-                    <img width="350px" src="https://toppng.com/uploads/thumbnail/android-app-on-google-play-11568829115kt4gig8l67.png" alt="phone image">
+                    <img width="350px"
+                        src="https://toppng.com/uploads/thumbnail/android-app-on-google-play-11568829115kt4gig8l67.png"
+                        alt="phone image">
                 </div>
                 <div class="col-lg-6 text-light  d-flex align-items-center justify-content-center flex-column">
                     <h1>Download Apps</h1>
-                    <p class="text-center">Download the app from google play store or <br> google play for better experience</p>
+                    <p class="text-center">Download the app from google play store or <br> google play for better
+                        experience</p>
                     <div class="d-flex justify-content-center align-items-center">
                         <div>
-                            <img width="150px" src="https://freepngimg.com/download/android/67006-app-play-google-android-store-free-clipart-hd.png" alt="playstore">
+                            <img width="150px"
+                                src="https://freepngimg.com/download/android/67006-app-play-google-android-store-free-clipart-hd.png"
+                                alt="playstore">
                         </div>
-                         <div>
-                            <img width="150px" src="https://benic360.com/wp-content/uploads/2020/06/apple-store-icon-png-8.png" alt="playstore">
+                        <div>
+                            <img width="150px"
+                                src="https://benic360.com/wp-content/uploads/2020/06/apple-store-icon-png-8.png"
+                                alt="playstore">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-     </div>
+    </div>
     <!-- testimony -->
+    <div class="my-5 text-center">
+        <h1>CLient Testimonial</h1>
+        <div class="scroll-text my-5">
+            <h2>this is the testimonial</h2>
+        </div>
+    </div>
+
+
+
+
+
 </div>
 <app-footer></app-footer>
