--- a/src/app/recipe/recipe.html
+++ b/src/app/recipe/recipe.html
@@ -1,1 +1,61 @@
-<p>recipe works!</p>
+<app-header />
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4">
+            <h4>Filter</h4>
+            <button class="btn mt-5">All</button>
+            <!-- cusine button menu -->
+            <br>
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                cusine Type
+            </button>
+
+            <div class="collapse" id="collapseExample">
+                <button class="btn">Cusine</button>
+
+            </div>
+            <br>
+            <!--  meal button menu -->
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample1">
+                Meal Type
+            </button>
+
+            <div class="collapse" id="collapseExample1">
+                <button class="btn">Meal</button>
+
+
+            </div>
+        </div>
+        <div class="col-lg-8">
+            <div class="d-flex justify-content-between align-item-center">
+                <h4>All Recipe</h4>
+                <input type="text" placeholder="Search By Recipe Name" class="form-control w-50 mt-5">
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                       <div class="p-3">
+                    <div style="height: 300px;"><img
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNToWL7FKIcpPaO43JYgqDrj7an1FCjSwNQw&s  "
+                            style="background-size: cover;" class="card-img-top h-100" alt="recipie"></div>
+                    <div class="card-body">
+                        <h5 class="card-title">Recipe name</h5>
+                        <p>cusine:name</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+
+
+
+
+
+<app-footer />
