--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -28,7 +28,7 @@
                 @for (recipe of allRecipes; track $index) {
                 <div class="p-3">
                     <div style="height: 300px;">
-                        <img [src]=" recipe.image " style="background-size: cover;"
+                        <img width="120px" height="120px" [src]=" recipe.image " style="background-size: cover;"
                             class="card-img-top h-100" alt="recipie"></div>
                     <div class="card-body">
                         <h5 class="card-title">{{recipe.name}}</h5>
