--- a/src/app/recipe/recipe.html
+++ b/src/app/recipe/recipe.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-lg-4">
             <h4>Filter</h4>
-            <button class="btn mt-5">All</button>
+            <button (click)="getAllRecipes()" class="btn mt-5">All</button>
             <!-- cusine button menu -->
             <br>
             <button class="btn dropdown-toggle" type="button" data-bs-toggle="collapse"
@@ -13,7 +13,9 @@
             </button>
 
             <div class="collapse" id="collapseExample">
-                <button class="btn">Cusine</button>
+                @for (cusine of cuisineArray; track $index) {
+                <button (click)="filterRecipe('cusine',cusine)" class="btn">{{cusine}}</button>
+                }
 
             </div>
             <br>
@@ -24,8 +26,10 @@
             </button>
 
             <div class="collapse" id="collapseExample1">
-                <button class="btn">Meal</button>
+                @for (meal of mealTypeArray; track $index) {
+                <button (click)="filterRecipe('mealType',meal)" class="btn">{{meal}}</button>
 
+                }
 
             </div>
         </div>
@@ -35,17 +39,21 @@
                 <input type="text" placeholder="Search By Recipe Name" class="form-control w-50 mt-5">
             </div>
             <div class="row">
+                @for (recipe of allRecipes; track $index) {
                 <div class="col-lg-4">
-                       <div class="p-3">
-                    <div style="height: 300px;"><img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNToWL7FKIcpPaO43JYgqDrj7an1FCjSwNQw&s  "
-                            style="background-size: cover;" class="card-img-top h-100" alt="recipie"></div>
-                    <div class="card-body">
-                        <h5 class="card-title">Recipe name</h5>
-                        <p>cusine:name</p>
+                    <div (click)="navigateView(recipe._id)" class="p-3">
+                        <div style="height: 300px;">
+                            <img src="recipes.image  " style="background-size: cover;" class="card-img-top h-100"
+                                alt="recipie">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">{{recipe.name}} </h5>
+                            <p>cusine:{{recipe.cusine}}</p>
+                        </div>
                     </div>
                 </div>
-                </div>
+                }
+
             </div>
         </div>
 
